删掉对sun.misc.Unsafe的依赖和替换过期方法Class.newInstance()